--- a/concepts/bolaMagica.html
+++ b/concepts/bolaMagica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             background: radial-gradient(black, white);
         }
-        div{
-            cursor: pointer;
+        .container {
+            position: relative;
             width: 500px;
             height: 500px;
             border-radius: 50%;
@@ -27,7 +27,7 @@
             place-items: center;
             text-align: center;
         }
-        .blanco{
+        .blanco {
             width: 250px;
             height: 250px;
             border-radius: 50%;
@@ -36,13 +36,30 @@
             display: grid;
             place-items: center;
         }
-
+        .back-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            background-color: purple;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .back-button:hover {
+            background-color:blueviolet;
+        }
     </style>
 </head>
 <body>
-    <div>
+    <a href="javascript:history.back()" class="back-button">Regresar</a>
+    <div class="container">
+        
         <div class="blanco">
-            <h1>8 Bola Magica</h1>
+            <h1>8 Bola Mágica</h1>
         </div> 
     </div>
     <script src="../app.js"></script>
