--- a/scissors.html
+++ b/scissors.html
@@ -13,33 +13,74 @@
             height: 100vh;
             place-items: center;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background: linear-gradient(to right, peru, aliceblue);
         }
         .content {
             display: grid;
             place-items: center;
             text-align: center;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .parent {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(3, 1fr);
-            grid-column-gap: 0px;
-            grid-row-gap: 0px;
+            grid-column-gap: 10px;
+            grid-row-gap: 10px;
             text-align: center;
         }
-        #div1 { grid-area: 1 / 1 / 2 / 3; }
-        #div2 { grid-area: 2 / 1 / 3 / 2; }
-        #div3 { grid-area: 2 / 2 / 3 / 3; }
-        #div4 { grid-area: 3 / 1 / 4 / 3; }
+        #div1 { 
+            grid-area: 1 / 1 / 2 / 3; 
+        }
+        #div2, #div3, #div4 {
+            background: #fff;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        #div4{
+            grid-area: 3 / 1 / 4 / 3;
+            max-height: fit-content;
+        }
         img {
             height: 100px; 
         }
-        button{
+        button {
             height: 50px;
+            background-color: green;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            padding: 10px 20px;
+        }
+        button:hover {
+            background-color: green;
+        }
+        .back-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            background-color: purple;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .back-button:hover {
+            background-color:blueviolet;
         }
     </style>
 </head>
 <body>
+    <a href="javascript:history.back()" class="back-button">Regresar</a>
     <div class="content">
         <h1>Piedra 🪨 Papel 🧻 o Tijeras ✂️</h1>
         <div class="parent">
